# SubZeroCodes

./: .gitignore
Arduino_src/include/: MeasureBatteryState.h
Arduino_src/lib/DueTimer/: DueTimer.h
Arduino_src/lib/PivotAngle/: PivotAngle.cpp  PivotAngle.h
Arduino_src/lib/SpeedControlRoboteq/: OriginalVersion.cpp  (+2 more)
Arduino_src/src/: main.cpp
Matlab_UI/: CheckTheRover.m  SubZero_ROS.mlapp  Test_ReadFromRadio.m  Test_WriteToRadio.m  crd.m  draft1.m
Matlab_UI/SurveyPoints/: PolarimetricProfile_3Jan2022 154842.txt
Others/: cleanLogs.sh  ctl_run.py  emptyLogs.sh  getlog_SCP.sh  rover_startup.sh  run_rover.sh  screenHelp.txt  send2ARK_SCP.sh  test.py
ros2_ws/src/subzero_dec22/: package.xml  setup.cfg  setup.py
ros2_ws/src/subzero_dec22/control/: KillAllNodes.py  KillRover.sh  RunRover_Python.py  RunRover_ROS2.py  WatchDog.sh  kill.py  sarrtk.py
ros2_ws/src/subzero_dec22/launch/: subzero_dec22.launch.py
ros2_ws/src/subzero_dec22/subzero_dec22/: ARK.py  ApRES.py  Arduino.py  AutoDrive.py  AutoPilot.py  Dr.py  Driving.py  Garmin.py  LogWriter.py  ManualDrive.py  Pilot.py  PingPongRadio.py  Radio.py  Telemetry.py  Trimble.py  WriteSpeed.py  ctl_kill.py  ctl_run.py  run.py
ros2_ws/src/subzero_dec22/subzero_dec22/submodules/: ClassGpsStreamer.py  DeltaTime.py  constrain.py
ros2_ws/src/subzero_dec22/test/: Backup_nodeR9sGPS.py  GarminStream.py  MyTestRoverRotation.m  ReadGarmin.py  ReadTrimble.py  RunNodes.py  RunNodes.sh  TestRoverWaypointControl.m  Test_ApRES.py  Test_ReadArduino.py  Test_ReadRadio.m  Test_ReadRadio.py  Test_SendGPS.py  test2.py
(+8 files in other folders)
